--- a/src/app/components/ng-select-plus/ng-select-plus.component.html
+++ b/src/app/components/ng-select-plus/ng-select-plus.component.html
@@ -23,7 +23,7 @@
 
         <div *ngIf="showSearch">
           <input type="text" name="search " id="search"
-          placeholder="{{placeholderSearch}}" [(ngModel)]="search" (input)="eventHandler($event)" autocomplete="off">
+          placeholder="{{placeholderSearch}}" [(ngModel)]="search" (input)="eventHandler($event)" autocomplete="off" autofocus>
         </div>
 
         <label>
